# anvil-workbench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
deploy/: Dockerfile.api  Dockerfile.hub  Dockerfile.web  nginx.conf
docs/: ADVERSARIAL-REVIEW.md  ARTICLE-DEMO.md  CONTRACTS.md  HARNESS-FOUNDATIONS.md  PROJECT.md  QUALIFICATION.md  ROADMAP.md  SESSION-HANDOFF.md  UI-ACCEPTANCE-AUDIT.md  WORKFLOW-OPERATION-LAYER.md
tests/: _support.py  conftest.py  test_advanced_contracts.py  test_advanced_dispatch.py  test_advanced_dispatch_api.py  test_advanced_routes.py  test_advanced_run_api.py  test_advanced_runtime.py  test_adversarial_qualification.py  test_api.py  test_bridge_state_flow.py  test_capability_profiles.py  test_chat_conversation_integration.py  test_chat_idempotency.py  test_chat_routes.py  test_chat_runtime_integration.py  test_chat_send_api.py  test_chat_stream.py  test_chat_voice_integration.py  test_contract_resources.py  test_conversation_api.py  test_conversation_models.py  test_conversation_organization.py  test_conversation_retention.py  test_conversation_store.py  test_deployment_wiring.py  test_harness_kernel.py  test_model_health.py  test_operation_catalog_integration.py  test_plan_task_delivery.py  test_plugin_host.py  test_prd_content_adapter.py  test_preference_gates.py  test_project_context.py  test_project_context_adversarial.py  test_project_context_projection.py  test_project_context_store.py  test_projection_seed.py  test_provider_catalogs.py  test_release_workflow.py  (+16 more)
(+162 files in other folders)
