[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-workbench"
version = "0.1.0"
description = "Private tailnet delivery cockpit for Anvil State and Anvil Serving."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sekou Doumbouya" }]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "psycopg[binary]>=3.2,<4",
  "neo4j>=5.25,<6",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
anvil-workbench = "workbench.cli:main"
workbench-bridge = "workbench.bridge:main"

[tool.setuptools.packages.find]
include = ["workbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
